# Pteroxide

./: .gitignore  Cargo.toml  README.md
http/: Cargo.toml
http/src/: errors.rs  lib.rs  request.rs  requests.rs
http/src/client/: account.rs  backup.rs  database.rs  file.rs  mod.rs  server.rs
http/src/requests/: account.rs  mod.rs  server.rs
models/: Cargo.toml
models/src/: fractal.rs  global.rs  lib.rs
models/src/application/: server.rs  users.rs
models/src/client/: account.rs  backups.rs  database.rs  file.rs  mod.rs  server.rs
pteroxide-http/: Cargo.toml
pteroxide-http/src/: builder.rs  error.rs  http.rs  lib.rs  response.rs  value.rs
pteroxide-http/src/actions/application/: users.rs
pteroxide-http/src/application/: allocations.rs  eggs.rs  locations.rs  mod.rs  nests.rs  nodes.rs  servers.rs  users.rs
pteroxide-http/src/application/servers/: control.rs  create.rs  get.rs  mod.rs  update.rs
pteroxide-http/src/request/: builder.rs  mod.rs
pteroxide-http/src/request/routing/: application.rs
pteroxide-http/src/routing/: application.rs  mod.rs
pteroxide-models/: Cargo.toml
pteroxide-models/src/: fractal.rs  lib.rs  time.rs  util.rs  value.rs
pteroxide-models/src/application/: allocation.rs  egg.rs  location.rs  mod.rs  nest.rs  node.rs  relations.rs  server.rs  users.rs
pteroxide-models/src/application/relations/: egg.rs  location.rs  mod.rs  nest.rs  node.rs  server.rs  user.rs
