[package]
name = "pteroxide-http"
description = "http requests module for pteroxide"
version = "0.1.0"
edition = "2021"
authors = [
    "Devonte <https://github.com/devnote-dev>"
]
license = "MIT"
repository = "https://github.com/PteroPackages/Pteroxide"

[dependencies]
bytes = "1"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

pteroxide-models = { path = "../models" }
