[package]
name = "pteroxide-models"
description = "api models for pteroxide"
version = "0.1.0"
edition = "2021"
authors = [
    "Devonte <https://github.com/devnote-dev>"
]
license = "MIT"
repository = "https://github.com/PteroPackages/Pteroxide"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
