[package]
name = "pteroxide-http"
version = "0.1.0"
edition = "2021"
authors = [
    "Devonte W <https://github.com/devnote-dev>"
]
license = "MIT"
repository = "https://github.com/PteroPackages/Pteroxide"

[dependencies]
hyper = { version = "0.14.23" }
pteroxide-models = { path = "../pteroxide-models" }
serde = { features = ["derive"], version = "1.0.147" }
serde_json = "1.0"
