[package]
name = "pteroxide-models"
version = "0.1.0"
edition = "2021"
authors = [
    "Devonte W <https://github.com/devnote-dev>"
]
license = "MIT"
repository = "https://github.com/PteroPackages/Pteroxide"

[dependencies]
serde = { features = ["derive"], version = "1.0.147" }
time = { features = ["parsing"], optional = true, version = "0.3.17" }

[features]
default = ["app", "fractal", "time"]

all = ["app", "app-relations", "fractal", "time", "util"]

app = ["app-relations"]

app-relations = []

# client = ["client-relations"]

# client-relations = []

fractal = []

time = ["dep:time"]

util = ["time"]

# wings = []
